docs/source/examples/502/out/out-02.txt

PLAY [Create and start project jails.] *****************************************

TASK [Display vars.] ***********************************************************
[ERROR]: Task failed: Finalization of task args for 'ansible.builtin.debug' failed: Error while resolving value for 'msg': 'vmm' is undefined

Task failed.
Origin: /scratch/collections/ansible_collections/vbotka/freebsd/playbooks/pb_iocage_project_create.yml:6:7

4   tasks:
5
6     - name: Display vars.
        ^ column 7

<<< caused by >>>

Finalization of task args for 'ansible.builtin.debug' failed.
Origin: /scratch/collections/ansible_collections/vbotka/freebsd/playbooks/pb_iocage_project_create.yml:12:7

10         project_jails_absent: "{{ project | difference(groups.all) }}"
11       run_once: true
12       ansible.builtin.debug:
         ^ column 7

<<< caused by >>>

Error while resolving value for 'msg': 'vmm' is undefined
Origin: /scratch/collections/ansible_collections/vbotka/freebsd/playbooks/pb_iocage_project_create.yml:13:14

11       run_once: true
12       ansible.builtin.debug:
13         msg: |
                ^ column 14

fatal: [branch-server.example.com]: FAILED! => 
    msg: 'Task failed: Finalization of task args for ''ansible.builtin.debug'' failed:
        Error while resolving value for ''msg'': ''vmm'' is undefined'

PLAY RECAP *********************************************************************
branch-server.example.com  : ok=0    changed=0    unreachable=0    failed=1    skipped=0    rescued=0    ignored=0   

